# fathom

./: .git-blame-ignore-revs  .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.cargo/: config.toml
.claude/skills/classify-traditions/: SKILL.md
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts  vitest.setup.ts
apps/desktop/src/: App.svelte  app.css  main.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/lib/: Header.svelte  LeftRail.svelte  LibrarySidebar.svelte  Onboarding.svelte  ParaphrasePane.svelte  Reader.svelte  SelectionPopover.svelte  StatusDot.svelte  boilerplate.test.ts  boilerplate.ts  pagination.test.ts  pagination.ts  selection.test.ts  selection.ts  snap-sentence.test.ts  snap-sentence.ts  theme.ts  use-library.svelte.ts  use-onboarding.svelte.ts  use-paraphrase.svelte.ts  use-search.svelte.ts  use-system-status.svelte.ts  use-themes.svelte.ts  use-themes.test.ts  utf8.ts
crates/fathom-bench/: Cargo.toml
crates/fathom-bench/data/: queries.json
crates/fathom-bench/results/: .gitignore  baseline-v0.20.json  v0.21.1-final.json  v0.21.1-final.notes.md
crates/fathom-bench/src/: main.rs
crates/fathom-build/: Cargo.toml
crates/fathom-build/src/: catalog.rs  fs_state.rs  main.rs  shard_format.rs  stages.rs  translators.rs  types.rs
crates/fathom-build/src/stages/: catalog_sync.rs  chunk_stage.rs  classify_themes.rs  deploy.rs  embed_stage.rs  enrich_translators.rs  fetch_corpus.rs  filter_stage.rs  harvest_prompts.rs  harvest_substrate.rs  manifest.rs  shard.rs  sign.rs  verify.rs
crates/fathom-chunker/: Cargo.toml
crates/fathom-chunker/src/: lib.rs  normalise.rs  split.rs  tests.rs
crates/fathom-chunker/tests/: multibyte_repro.rs
crates/fathom-cli/: Cargo.toml
crates/fathom-cli/src/: main.rs
crates/fathom-core/: Cargo.toml
crates/fathom-core/data/: fathom.pub  iconic-phrases.toml  themes.json
crates/fathom-core/src/: bm25_index.rs  bootstrap.rs  fusion.rs  identify.rs  judge.rs  lexicon.rs  lib.rs  library.rs  orchestrate.rs  parser.rs  prompts.rs  runtime.rs  themes.rs  types.rs
crates/fathom-embed/: Cargo.toml
crates/fathom-embed/src/: lib.rs  tests.rs
crates/fathom-embed/tests/: live_model.rs
crates/fathom-engine/: Cargo.toml
crates/fathom-engine/src/: http.rs  lib.rs  llama_cpp.rs  ollama.rs
lexicon/: README.md  aristotelian-de-anima.yaml  aristotelian-metaphysics.yaml  aristotelian-nicomachean-ethics.yaml  aristotelian-politics.yaml  buddhist-dhammapada.yaml  buddhist-heart-sutra.yaml  cartesian-discourse.yaml  cartesian-meditations.yaml  confucian-analects.yaml  confucian-mencius.yaml  daoist-tao-te-ching.yaml  daoist-zhuangzi.yaml  epictetus-enchiridion.yaml  hegelian-phenomenology.yaml  kantian-critique-pure-reason.yaml  kantian-groundwork.yaml  kierkegaardian-either-or.yaml  kierkegaardian-fear-and-trembling.yaml  nietzschean-beyond-good-and-evil.yaml  nietzschean-genealogy-of-morals.yaml  nietzschean-thus-spake-zarathustra.yaml  schopenhauerian-world-as-will.yaml  spinozist-ethics.yaml  spinozist-tractatus.yaml  stoic-epictetus-discourses.yaml  stoic-marcus-meditations.yaml  stoic-seneca-letters.yaml  vedantic-bhagavad-gita.yaml  vedantic-upanishads.yaml
