[workspace]
resolver = "2"
members = [
    "crates/fathom-core",
    "crates/fathom-engine",
    "crates/fathom-chunker",
    "crates/fathom-embed",
    "crates/fathom-build",
    "crates/fathom-cli",
    "crates/fathom-bench",
    "apps/desktop/src-tauri",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
authors = ["Robin Lange <robinsimonlange@gmail.com>"]
repository = "https://github.com/robinslange/fathom"
rust-version = "1.90"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util", "process"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
clap = { version = "4", features = ["derive", "env"] }
include_dir = "0.7"
once_cell = "1"
regex = "1"
async-trait = "0.1"
directories = "6"
sha2 = "0.10"
futures-util = "0.3"
# Pinned to a specific patch — the bundled C++ build in llama-cpp-sys-2
# has shifted across patch versions, so accepting the full 0.1.x range
# would let an `update` regress the build. Bump deliberately.
llama-cpp-2 = "=0.1.146"
ort = "2.0.0-rc.12"
ndarray = "0.17"
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
half = "2.4"
unicode-segmentation = "1.12"
rmp-serde = "1.3"
zstd = "0.13"
minisign = "0.7"
minisign-verify = "0.2"
lru = "0.12"
rbook = "0.7"
roxmltree = "0.20"
quick-xml = "0.37"
pdf-extract = "0.9"
csv = "1.3"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
serde_bytes = "0.11"
bm25 = "2"
toml = "0.8"

fathom-core = { path = "crates/fathom-core" }
fathom-engine = { path = "crates/fathom-engine" }
fathom-chunker = { path = "crates/fathom-chunker" }
fathom-embed = { path = "crates/fathom-embed" }

[profile.release]
lto = true
codegen-units = 1
strip = true
