[package]
name = "fathom-build"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Fathom v0.2 corpus build pipeline. Runs on operator machine only. Stages: catalog-sync, enrich-translators, filter, fetch-corpus, chunk, embed, shard, manifest, sign."

[[bin]]
name = "fathom-build"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
clap.workspace = true
sha2.workspace = true
once_cell.workspace = true
regex.workspace = true
futures-util.workspace = true
directories.workspace = true

# build-pipeline-specific
rmp-serde.workspace = true
zstd.workspace = true
minisign.workspace = true
rbook.workspace = true
roxmltree.workspace = true
quick-xml.workspace = true

# shared with runtime
fathom-chunker.workspace = true
fathom-embed.workspace = true
