[package]
name = "fathom-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Fathom CLI — internal dev tool for paraphrasing classical philosophy"
default-run = "fathom"

[[bin]]
name = "fathom"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
serde_json.workspace = true
fathom-core.workspace = true
fathom-engine.workspace = true
