[package]
name = "fathom-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Fathom core: lexicon, prompts, orchestration, NLI judge"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
include_dir.workspace = true
once_cell.workspace = true
regex.workspace = true
async-trait.workspace = true
directories.workspace = true
sha2.workspace = true
futures-util.workspace = true
ort.workspace = true
ndarray.workspace = true
tokenizers.workspace = true
unicode-segmentation.workspace = true
fathom-engine.workspace = true
fathom-embed.workspace = true
fathom-chunker.workspace = true
minisign-verify.workspace = true
lru.workspace = true
rmp-serde.workspace = true
zstd.workspace = true
serde_bytes.workspace = true
