[package]
name = "fathom-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Fathom backend abstraction: llama.cpp (bundled), Ollama (connector), HTTP (cloud)"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
async-trait.workspace = true
tokio.workspace = true
once_cell.workspace = true
encoding_rs = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
llama-cpp-2 = { workspace = true, features = ["metal"] }
llama-cpp-sys-2 = "0.1"

[target.'cfg(not(target_os = "macos"))'.dependencies]
llama-cpp-2 = { workspace = true }
llama-cpp-sys-2 = "0.1"
