[package]
name = "fathom-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Fathom desktop app (Tauri + Svelte)"

[lib]
name = "fathom_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "fathom-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
once_cell.workspace = true
fathom-core.workspace = true
fathom-engine.workspace = true
